--- a/style.css
+++ b/style.css
@@ -1,12 +1,52 @@
 body {
     margin: 0;
     font-family: 'Roboto', Tahoma, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 30pt;
+    color: rgb(100, 100, 100);
 }
 
-.h1 {
-    color: #4683b9;
-    margin: 0 0 25vh 0;
+.person {
+    color: rgb(153, 153, 153);
+    font-size: 30pt;
+    padding: 20pt 0;
+}
+
+.person span {
+    white-space: nowrap;
+}
+
+ ::selection {
+    background: black;
+}
+
+.name {
+    font-size: 18pt;
+}
+
+@media(min-width: 415px){
+    .person {
+        font-size: 60pt;
+    }
+    .name {
+        font-size: 36pt;
+    }
+}
+
+@media(min-width: 768px){
+    .container {
+        max-width: 768px;
+        margin: auto;
+    }
+}
+
+a {
+    color: #6f6fff;
+}
+
+.contact {
+    margin: 0 0 20pt 0;
+}
+
+.service-details {
+    font-size: 18pt;
 }
