--- a/style.css
+++ b/style.css
@@ -1,52 +1,39 @@
 body {
-    margin: 0;
     font-family: 'Roboto', Tahoma, sans-serif;
-    font-size: 30pt;
-    color: rgb(100, 100, 100);
 }
 
-.person {
-    color: rgb(153, 153, 153);
-    font-size: 30pt;
-    padding: 20pt 0;
+.container {
+    max-width: 810px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.person span {
-    white-space: nowrap;
+.box {
+    width: 316px;
+    margin: 40vh auto 0 auto;
+    padding: 30px;
+    border-radius: 4px;
+    box-shadow: 0 4px 8px rgba(60, 65, 70, 0.2);
+    letter-spacing: 2px;
+    text-align: center;
+    background: white;
+    transform: translateY(-50%);
 }
 
- ::selection {
-    background: black;
+.box:hover {
+    box-shadow: 0 4px 12px rgba(35, 38, 40, 0.2);
 }
 
-.name {
-    font-size: 18pt;
-}
-
-@media(min-width: 415px){
-    .person {
-        font-size: 60pt;
-    }
-    .name {
-        font-size: 36pt;
-    }
-}
-
-@media(min-width: 768px){
-    .container {
-        max-width: 768px;
-        margin: auto;
-    }
+.plane {
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: visible;
+    z-index: -1;
+    height: 100vh;
+    width: 100vw;
 }
 
 a {
-    color: #6f6fff;
-}
-
-.contact {
-    margin: 0 0 20pt 0;
-}
-
-.service-details {
-    font-size: 18pt;
+    color: #F48024;
 }
