--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ a {
 }
 
 .menu {
-    position: absolute;
     top: 0;
     left: 0;
     padding: 5px;
@@ -54,10 +53,14 @@ a {
     letter-spacing: 1.6px;
 }
 
+.link:hover {
+    color: #0081bc;
+    transition: 300ms;
+}
+
 .link img {
     border-radius: 50%;
-    opacity: 0.8;
-    transition: 300ms;
+    opacity: 0.8;   
 }
 
 .link .img {
