--- a/style.css
+++ b/style.css
@@ -71,8 +71,17 @@ a {
     opacity: 1;
 }
 
+.main {
+    margin: 36px auto;
+    text-align: center;
+}
+
 @media (min-width: 500px) {
     .menu {
         position: fixed;
+    }
+    .main {
+        margin: 0;
+        text-align: left;
     }
 }
