--- a/wwwroot/forms.css
+++ b/wwwroot/forms.css
@@ -86,6 +86,7 @@ input[type=password]:focus-visible {
     border: 3px solid #23a5e0;
 }
 
+button,
 input[type=submit] {
     display: inline-block;
     font-size: 16px;
@@ -98,6 +99,7 @@ input[type=submit] {
     border-radius: 22px;
 }
 
+button:hover,
 input[type=submit]:hover {
     color: #23a5e0;
     text-decoration: underline;
@@ -118,25 +120,34 @@ span {
     color: white;
 }
 
+#sd {
+    display: flex;
+    width: auto;
+    align-items: flex-start;
+}
+
 @media (prefers-color-scheme: dark) {
     body {
         background: black;
-    }
-
-    .card {
-        color: rgb(160, 158, 158);
+        color: white;
     }
 
     .card .background {
         background-image: url(/img/sky-dark.jpg);
     }
 
+    button,
     input[type=submit] {
         background-color: #23a5e0;
         color: #ccc;
     }
 
+    a {
+        color: #23a5e0;
+    }
+
+    button:hover,
     input[type=submit]:hover {
         color: #fff;
-    }    
+    }
 }
