--- a/wwwroot/forms.css
+++ b/wwwroot/forms.css
@@ -71,7 +71,7 @@ form {
 
 input[type=text],
 input[type=password] {
-    border: 3px solid transparent;
+    border: 3px solid #d1d1d1;
     outline: none;
     padding: 11px 15px 13px 15px;
     border-radius: 40px;
