--- a/wwwroot/forms.css
+++ b/wwwroot/forms.css
@@ -87,6 +87,7 @@ input[type=password]:focus-visible {
 }
 
 button,
+input[type=button],
 input[type=submit] {
     display: inline-block;
     font-size: 16px;
@@ -100,6 +101,7 @@ input[type=submit] {
 }
 
 button:hover,
+input[type=button]:hover,
 input[type=submit]:hover {
     color: #23a5e0;
     text-decoration: underline;
