--- a/wwwroot/tool.css
+++ b/wwwroot/tool.css
@@ -22,13 +22,14 @@ body {
     width: 100%;
     position: fixed;
     bottom: 0;
-    height: 30px;
+    height: 45px;
     overflow-y: auto;
     border-top: 1px solid #ccc;
     display: flex;
     align-items: center;
     justify-content: center;
     background: white;
+    font-size: larger;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -45,7 +46,7 @@ body {
     display: flex;
     align-items: center;
     padding: 0.2em 1em;
-    text-decoration: none
+    text-decoration: none;
 }
 
 .menu a:hover {
@@ -88,6 +89,13 @@ body {
 
 .visit {
     display: flex;
+    line-height: 32px;
+    background: #111;
+    margin: 2px;
+}
+
+.visitid {
+    margin: 0 16px;
 }
 
 .visit span {
