--- a/wwwroot/tool.css
+++ b/wwwroot/tool.css
@@ -44,9 +44,12 @@ body {
 
 .menu a {
     display: flex;
-    align-items: center;
     padding: 0.2em 1em;
+    flex-direction: column;
+    align-items: center;
     text-decoration: none;
+    font-size: smaller;
+    color: #fff;
 }
 
 .menu a:hover {
