--- a/wwwroot/tool.css
+++ b/wwwroot/tool.css
@@ -48,7 +48,7 @@ body {
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    font-size: smaller;
+    font-size: 8px;
     color: #fff;
 }
 
@@ -58,8 +58,8 @@ body {
 
 .ico {
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     background-repeat: no-repeat;
     background-size: contain;
     margin: 0.1em;
