--- a/wwwroot/tool.css
+++ b/wwwroot/tool.css
@@ -28,14 +28,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: white;
     font-size: larger;
+    backdrop-filter: blur(32px) ;
 }
 
 @media (prefers-color-scheme: dark) {
-    .menu {
-        background: black;
-    }
+    
 
     .ico {
         filter: invert();
@@ -48,7 +46,7 @@ body {
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    font-size: 8px;
+    font-size: 10px;
     color: #fff;
 }
 
