--- a/wwwroot/components.css
+++ b/wwwroot/components.css
@@ -1,6 +1,6 @@
 html,
 body {
-    margin: 0 0 0 100px;
+    margin: 0;
 }
 
 body {
@@ -121,6 +121,10 @@ input[type=button],
 input[type=submit],
 input[type=reset] {
     padding: 0 5px;
+}
+
+input[type=number] {
+    min-width: 100px;
 }
 
 
