--- a/wwwroot/components.css
+++ b/wwwroot/components.css
@@ -49,6 +49,12 @@ button {
     letter-spacing: inherit;
     padding: 0;
     line-height: 32px;
+    border-radius: 0;
+    background-color: var(--input-background-color);
+}
+
+.item {
+    line-height: 32px;
     background-color: var(--input-background-color);
 }
 
@@ -100,19 +106,10 @@ input[type=submit].focus {
     background-color: var(--button-background-color-focus);
 }
 
-form {
-    width: 400px;
-}
-
 label {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.item {
-    line-height: 32px;
-    background-color: var(--input-background-color);
 }
 
 .btn,
@@ -205,6 +202,37 @@ input[type=file]:hover {
 
 input[type=file]:focus {
     background-color: var(--input-background-color-focus);
+}
+
+.menu {
+    display: flex;
+    height: 64px;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(16px);
+    background-image: url(/img/footer_dark.svg);
+    outline: 1px solid #e3f2fdb8;
+}
+
+.menu .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 8px 4px 0 4px;
+}
+
+.ico {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+}
+
+.ico-search {
+    background-image: url(/img/search.svg);
+}
+
+.ico-visits {
+    background-image: url(/img/visits.svg);
 }
 
 ::selection {
